# wireless_mic

./: .gitmodules  app_ws.code-workspace  debug_ozone.jdebug  features_list.txt
app_ws/: .gitignore
app_ws/w_mic_v1.0/: CMakeLists.txt  ozone.jdebug  prj.conf
app_ws/w_mic_v1.0/boards/: nrf5340dk_nrf5340_cpuapp.overlay
app_ws/w_mic_v1.0/src/: adc_cont_samp.c  adc_cont_samp.h  adc_drv.c  adc_drv.h  app_config.c  app_config.h  app_peripherals.c  app_peripherals.h  app_threads.c  app_threads.h  audio.c  audio.h  main.c  pwm_drv.c  pwm_drv.h
app_ws/w_mic_v1.0/src/adc_drv/: adc_drv.c  adc_drv.h
app_ws/w_mic_v1.0/src/audio/: audio.c  audio.h
app_ws/w_mic_v1.0/src/examples/adc_cont_samp/: adc_cont_samp.c  adc_cont_samp.h
app_ws/w_mic_v1.0/src/examples/i2s_sample/: i2s_sample.c  i2s_sample.h
app_ws/w_mic_v1.0/src/i2s_drv/: i2s_drv.c  i2s_drv.h
app_ws/w_mic_v1.0/src/pwm_drv/: pwm_drv.c  pwm_drv.h
i2s_rx_tx/: CMakeLists.txt  prj.conf
i2s_rx_tx/boards/: nrf5340dk_nrf5340_cpuapp.overlay
i2s_rx_tx/src/: ble_drv.c  ble_drv.h  i2s_txrx.c  i2s_txrx.h  main.c
res/: nrf_bluetooth_ble.txt
res/ADC/: PCM1808.txt
res/DAC/: pcm5102a.txt
res/microcontroller/: nRF5340.url
res/microcontroller/nrf5340-development-kit---hardware-files-2_0_0/nRF5340 Development Kit - Hardware files 2_0_0/PCA10095-nRF5340 Development Board 2_0_0/Altium Designer files/: pca10095.PrjPCB
res/microcontroller/nrf5340-development-kit---hardware-files-2_0_0/nRF5340 Development Kit - Hardware files 2_0_0/PCA10095-nRF5340 Development Board 2_0_0/Production files/DRILL/: 400432.DR1  400432.DRR
res/microcontroller/nrf5340-development-kit---hardware-files-2_0_0/nRF5340 Development Kit - Hardware files 2_0_0/PCA10095-nRF5340 Development Board 2_0_0/Production files/GERBER/: 400432.GM16  400432.GM4  400432.GTL
res/nrf5340-development-kit---hardware-files-2_0_0/nRF5340 Development Kit - Hardware files 2_0_0/PCA10095-nRF5340 Development Board 2_0_0/Altium Designer files/: pca10095.IntLib  pca10095_sheet2_nrf5340_mcu.SchDoc  pca10095_sheet4_misc.SchDoc  pca10095_sheet5_connectors.Harness  pca10095_sheet5_connectors.SchDoc
res/nrf5340-development-kit---hardware-files-2_0_0/nRF5340 Development Kit - Hardware files 2_0_0/PCA10095-nRF5340 Development Board 2_0_0/Production files/BOM/: PCA10095_BOM_Web.xls
res/nrf5340-development-kit---hardware-files-2_0_0/nRF5340 Development Kit - Hardware files 2_0_0/PCA10095-nRF5340 Development Board 2_0_0/Production files/DRILL/: 400432-RoundHoles.TX1  400432-RoundHoles.TXT  400432.DRL
res/nrf5340-development-kit---hardware-files-2_0_0/nRF5340 Development Kit - Hardware files 2_0_0/PCA10095-nRF5340 Development Board 2_0_0/Production files/GERBER/: 400432.G1  400432.G2  400432.GBL  400432.GBO  400432.GBP  400432.GBS  400432.GM1  400432.GTO  400432.GTP  400432.GTS
scripts/octave/: I2S_calc.m  I2S_find_fs.m
scripts/octave/DSP_filters/: fir_coeffs.h  fir_gen.m  signal.h  simulate_signals.m
scripts/octave/I2S/: I2S_filter.m  I2S_find_fs.m
wmic/: CMakeLists.txt  Kconfig  prj.conf
wmic/boards/: nrf5340dk_nrf5340_cpuapp.overlay
wmic/src/: bt1036c_drv.c  bt1036c_drv.h  config.h  i2s_txrx.c  i2s_txrx.h  main.c  pages.c  pages.h  signals.h
wmic/src/DSP/: adt.c  low_pass_filter.c  signals.c  signals.h
wmic/src/audio/: CMakeLists.txt  audio.c  audio.h
wmic/src/audio_drv/: audio_drv.c  audio_drv.h
wmic/src/bluetooth_drv/: bluetooth_drv.c  bluetooth_drv.h
wmic/src/bt1036c/: bt1036c_drv.c  bt1036c_drv.h
wmic/src/display_drv/: display_drv.c  display_drv.h
wmic/src/filters/: adt.c  adt.h  low_pass_filter.c  low_pass_filter.h  signals.c  signals.h
wmic/src/keypad_drv/: keypad_drv.c  keypad_drv.h
wmic/src/pcf8574/: pcf8574.c  pcf8574.h
wmic/src/ssd1306/: my_fonts.h  ssd1306.c  ssd1306.h
